# smart-novel-beatrice

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  Dockerfile  Makefile  README.md  compose.yml  conftest.py  package-lock.json  package.json  pyproject.toml
.github/: CONTRIBUTING.md  README.md  llm-latency-primer.md
.github/workflows/: dockerhub-release.yml  docs.yml
docs/: spectaql.yml  versions.json
docs/_pages/: index.html  version-switcher.js
docs/latest/: index.html  schema.graphql
docs/v1.0.1/: index.html  schema.graphql
docs/v2.0.0/: index.html  schema.graphql
docs/v2.0.0/stylesheets/: spectaql.min.css
local-setup/: otel-collector-config.yaml
local-setup/ollama/: Dockerfile  healthcheck.sh  prepull-model.sh
local-setup/scripts/: check_private_imports.py
src/: __init__.py  main.py  scaffolding__test.py  schema.py
src/modules/: __init__.py
src/modules/explain_word/: __init__.py  agent.py  agent__test.py  resolver.py  resolver__test.py  types.py  types__test.py
src/modules/explain_word/evals/: baseline.json  dataset.yaml  run.py
src/modules/explain_word/prompts/: v1.jinja2
src/modules/healthcheck/: __init__.py  resolver.py  resolver__test.py
src/modules/normalize_tts/: __init__.py  agent.py  agent__test.py  exceptions.py  exceptions__test.py  resolver.py  resolver__test.py  types.py
src/modules/normalize_tts/evals/: baseline.json  dataset.yaml  run.py
src/modules/normalize_tts/prompts/: v1.jinja2
src/utils/: __init__.py  config.py  config__test.py  evals.py  exceptions.py  graphql_scalars.py  graphql_scalars__test.py  graphql_span_rename.py  graphql_span_rename__test.py  observability.py  observability__test.py  prompt_loader.py  prompt_loader__test.py  pydantic_validation.py  pydantic_validation__test.py  span_filter.py  span_filter__test.py  spectaql_directive.py
tests/: __init__.py  conftest.py  test_explain_word_graphql.py  test_health_graphql.py  test_normalize_tts_graphql.py  test_placeholder.py
