[project]
name = "smart-novel-beatrice"
version = "0.0.0"
description = "LLM-powered features for smart-novel: word explanation, TTS text normalization. GraphQL over an OpenAI-compatible model backend."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
authors = [{ name = "kasir-barati" }]

dependencies = [
    "fastapi>=0.115",
    "strawberry-graphql[fastapi]>=0.243",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pydantic-ai>=0.0.14",
    "jinja2>=3.1",
    "httpx>=0.27",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "testcontainers>=4.8",
    "ruff>=0.8",
    "pyright>=1.1.389",
    "pydantic-evals>=0.0.14",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "C4",       # comprehensions
    "SIM",      # simplify
    "N",        # naming
    "RUF",      # ruff-specific
]
ignore = [
    "E501",     # line-length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"**/*__test.py" = ["S101"]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "dist", "build"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = "none"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
python_files = ["*__test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["src", "tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests that hit real services (Testcontainers, live HTTP).",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["**/*__test.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
